--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/beer"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -19,7 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.cadastros.CadastroMarcaActivity"></activity>
+        <activity
+            android:name=".views.cesta.ListCestasActivity"
+            android:label="@string/title_cesta_activity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".views.cesta.CadastroCestaActivity"
+            android:label="@string/title_activity_cadastro_cesta"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
