--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.edu.ifba.mybeerapp">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/beer"
@@ -22,16 +27,22 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".views.cesta.ListCestasActivity"
-            android:label="@string/title_cesta_activity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:label="@string/title_activity_cestas"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".views.cesta.CadastroCestaActivity"
             android:label="@string/title_activity_cadastro_cesta"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".views.produto.CadastroProdutoActivity"
+            android:label="@string/title_activity_cadastro_produto"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".views.produto.ProdutosListActivity"
+            android:label="@string/title_activity_produtos"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
