--- a/flutter_mybeerapp/pubspec.yaml
+++ b/flutter_mybeerapp/pubspec.yaml
@@ -11,7 +11,7 @@ description: My Beer, My Cash
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -26,6 +26,8 @@ dependencies:
   http: ^0.12.0+1
   toast: ^0.1.3
   intl:
+  flutter_staggered_grid_view: ^0.2.7
+  flutter_sparkline: ^0.1.0
 
 dev_dependencies:
   flutter_test:
